Discard changes to packages/heap-snapshot-worker/tsconfig.json

--- a/packages/heap-snapshot-worker/tsconfig.json
+++ b/packages/heap-snapshot-worker/tsconfig.json
@@ -23,5 +23,5 @@
     "useUnknownInCatchVariables": false,
     "allowImportingTsExtensions": true
   },
-  "include": ["src", "benchmark"]
+  "include": ["src"]
 }
