--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     { "path": "./packages/memory-leak-finder" },
     { "path": "./packages/original-name-worker" },
     { "path": "./packages/page-object" },
+    { "path": "./packages/prompts" },
     { "path": "./packages/repository-worker" },
     { "path": "./packages/source-map-worker" },
     { "path": "./packages/stdout-worker" },
