--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
         if: matrix.os == 'ubuntu-24.04'
         uses: coactions/setup-xvfb@v1
         with:
-          run: node packages/cli/bin/test.js --cwd packages/e2e --check-leaks --measure-after --measure event-listeners
+          run: node packages/cli/bin/test.js --cwd packages/e2e --check-leaks --measure-after --measure event-listeners --runs 17
       - name: Run headless test (check leaks, dom counters)
         if: matrix.os == 'ubuntu-24.04'
         uses: coactions/setup-xvfb@v1
