--- a/packages/cursor-e2e/tsconfig.json
+++ b/packages/cursor-e2e/tsconfig.json
@@ -8,6 +8,7 @@
     "moduleResolution": "NodeNext",
     "isolatedModules": true,
     "strict": true,
+    "strictNullChecks": true,
     "noImplicitAny": false,
     "skipLibCheck": true,
     "noEmit": true,
