--- a/packages/e2e/tsconfig.json
+++ b/packages/e2e/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleResolution": "NodeNext",
     "isolatedModules": true,
     "strict": true,
+    "strictNullChecks": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
     "noEmit": true,
