--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.vscode-zip-data
+.vscode-requests-old
+.vscode-mock-requests
+.vscode-proxy-certs
+.vscode-requests
 snapshot
 snapshots
 .vscode-runtime-paths
