--- a/packages/proxy-worker/package.json
+++ b/packages/proxy-worker/package.json
@@ -15,7 +15,9 @@
     "@lvce-editor/assert": "^1.4.0",
     "@lvce-editor/rpc": "^4.20.0",
     "@lvce-editor/verror": "^1.7.0",
-    "execa": "^9.6.1"
+    "@mongodb-js/zstd": "^7.0.0",
+    "execa": "^9.6.1",
+    "node-forge": "^1.3.1"
   },
   "devDependencies": {
     "@types/node": "^24.10.1"
