--- a/packages/proxy-worker/package.json
+++ b/packages/proxy-worker/package.json
@@ -20,6 +20,7 @@
     "node-forge": "^1.3.1"
   },
   "devDependencies": {
-    "@types/node": "^24.10.1"
+    "@types/node": "^24.10.1",
+    "@types/node-forge": "^1.3.11"
   }
 }
