--- a/packages/storage-worker/package.json
+++ b/packages/storage-worker/package.json
@@ -10,6 +10,10 @@
   "bin": {
     "storage-worker": "bin/storage-worker.js"
   },
+  "scripts": {
+    "test": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --detectOpenHandles --forceExit",
+    "test:watch": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --watch"
+  },
   "jest": {
     "injectGlobals": false,
     "collectCoverage": true,
