--- a/packages/proxy-worker/package.json
+++ b/packages/proxy-worker/package.json
@@ -17,6 +17,8 @@
     "@lvce-editor/verror": "^1.7.0",
     "@mongodb-js/zstd": "^7.0.0",
     "execa": "^9.6.1",
+    "http-proxy-agent": "^7.0.2",
+    "node-fetch": "^3.3.2",
     "node-forge": "^1.3.3"
   },
   "devDependencies": {
