--- a/packages/proxy-worker/package.json
+++ b/packages/proxy-worker/package.json
@@ -18,10 +18,12 @@
     "@mongodb-js/zstd": "^7.0.0",
     "execa": "^9.6.1",
     "http-proxy-agent": "^7.0.2",
+    "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
     "node-forge": "^1.3.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^24.10.2",
     "@types/node-forge": "^1.3.14"
   }
