--- a/packages/proxy-worker/src/parts/GetMockFileName/mock-config.json
+++ b/packages/proxy-worker/src/parts/GetMockFileName/mock-config.json
@@ -138,6 +138,18 @@
     "filename": "blackboxapp_gallery_vsassets_io_apis_public_gallery_publisher_Blackboxapp_extension_blackboxagent_3_5_44_assetbyname_Microsoft_VisualStudio_Services_Icons_Default_get.json"
   },
   {
+    "hostname": "code.visualstudio.com",
+    "pathname": "/assets/docs/copilot/copilot-chat/inline-chat-question-example.png",
+    "method": "GET",
+    "filename": "code_visualstudio_com_assets_docs_copilot_copilot_chat_inline_chat_question_example_png_get.json"
+  },
+  {
+    "hostname": "code.visualstudio.com",
+    "pathname": "/assets/docs/copilot/inline-suggestions/nes-point.gif",
+    "method": "GET",
+    "filename": "code_visualstudio_com_assets_docs_copilot_inline_suggestions_nes_point_gif_get.json"
+  },
+  {
     "hostname": "copilot-telemetry.githubusercontent.com",
     "pathname": "/telemetry",
     "method": "GET",
@@ -148,6 +160,12 @@
     "pathname": "/extensions/cursor-coplit/cursor-copilot/1.0.1/1745645252082/Microsoft.VisualStudio.Services.Icons.Default",
     "method": "GET",
     "filename": "cursor_coplit_gallerycdn_vsassets_io_extensions_cursor_coplit_cursor_copilot_1_0_1_1745645252082_Microsoft_VisualStudio_Services_Icons_Default_get.json"
+  },
+  {
+    "hostname": "eamodio.gallery.vsassets.io",
+    "pathname": "/_apis/public/gallery/publisher/eamodio/extension/gitlens/17.7.1/assetbyname/Microsoft.VisualStudio.Services.Icons.Default",
+    "method": "GET",
+    "filename": "eamodio_gallery_vsassets_io_apis_public_gallery_publisher_eamodio_extension_gitlens_17_7_1_assetbyname_Microsoft_VisualStudio_Services_Icons_Default_get.json"
   },
   {
     "hostname": "eamodio.gallerycdn.vsassets.io",
@@ -190,6 +208,18 @@
     "pathname": "/text-3-small/v1.106/commands/ms-vscode.vscode-js-profile-table.json",
     "method": "GET",
     "filename": "embeddings_vscode_cdn_net_text_3_small_v1_106_commands_ms_vscode_vscode_js_profile_table_json_get.json"
+  },
+  {
+    "hostname": "embeddings.vscode-cdn.net",
+    "pathname": "/text-3-small/v1.108/commands/core.json",
+    "method": "GET",
+    "filename": "embeddings_vscode_cdn_net_text_3_small_v1_108_commands_core_json_get.json"
+  },
+  {
+    "hostname": "embeddings.vscode-cdn.net",
+    "pathname": "/text-3-small/v1.108/commands/latest.txt",
+    "method": "GET",
+    "filename": "embeddings_vscode_cdn_net_text_3_small_v1_108_commands_latest_txt_get.json"
   },
   {
     "hostname": "feiskyer.gallerycdn.vsassets.io",
@@ -241,6 +271,12 @@
   },
   {
     "hostname": "github.gallery.vsassets.io",
+    "pathname": "/_apis/public/gallery/publisher/GitHub/extension/copilot-chat/0.36.2025121004/assetbyname/Microsoft.VisualStudio.Services.VSIXPackage",
+    "method": "GET",
+    "filename": "github_gallery_vsassets_io_apis_public_gallery_publisher_GitHub_extension_copilot_chat_0_36_2025121004_assetbyname_Microsoft_VisualStudio_Services_VSIXPackage_get.json"
+  },
+  {
+    "hostname": "github.gallery.vsassets.io",
     "pathname": "/_apis/public/gallery/publisher/GitHub/extension/copilot/1.388.0/assetbyname/Microsoft.VisualStudio.Services.VSIXPackage",
     "method": "GET",
     "filename": "github_gallery_vsassets_io_apis_public_gallery_publisher_GitHub_extension_copilot_1_388_0_assetbyname_Microsoft_VisualStudio_Services_VSIXPackage_get.json"
@@ -265,9 +301,33 @@
   },
   {
     "hostname": "github.gallerycdn.vsassets.io",
+    "pathname": "/extensions/github/copilot-chat/0.33.5/1765210039863/Microsoft.VisualStudio.Services.Icons.Default",
+    "method": "GET",
+    "filename": "github_gallerycdn_vsassets_io_extensions_github_copilot_chat_0_33_5_1765210039863_Microsoft_VisualStudio_Services_Icons_Default_get.json"
+  },
+  {
+    "hostname": "github.gallerycdn.vsassets.io",
     "pathname": "/extensions/github/copilot-chat/0.33.5/1765210039863/Microsoft.VisualStudio.Services.VSIXPackage",
     "method": "GET",
     "filename": "github_gallerycdn_vsassets_io_extensions_github_copilot_chat_0_33_5_1765210039863_Microsoft_VisualStudio_Services_VSIXPackage_get.json"
+  },
+  {
+    "hostname": "github.gallerycdn.vsassets.io",
+    "pathname": "/extensions/github/copilot-chat/0.36.2025121004/1765391829792/Microsoft.VisualStudio.Code.Manifest",
+    "method": "GET",
+    "filename": "github_gallerycdn_vsassets_io_extensions_github_copilot_chat_0_36_2025121004_1765391829792_Microsoft_VisualStudio_Code_Manifest_get.json"
+  },
+  {
+    "hostname": "github.gallerycdn.vsassets.io",
+    "pathname": "/extensions/github/copilot-chat/0.36.2025121004/1765391829792/Microsoft.VisualStudio.Services.Icons.Default",
+    "method": "GET",
+    "filename": "github_gallerycdn_vsassets_io_extensions_github_copilot_chat_0_36_2025121004_1765391829792_Microsoft_VisualStudio_Services_Icons_Default_get.json"
+  },
+  {
+    "hostname": "github.gallerycdn.vsassets.io",
+    "pathname": "/extensions/github/copilot-chat/0.36.2025121004/1765391829792/Microsoft.VisualStudio.Services.VSIXPackage",
+    "method": "GET",
+    "filename": "github_gallerycdn_vsassets_io_extensions_github_copilot_chat_0_36_2025121004_1765391829792_Microsoft_VisualStudio_Services_VSIXPackage_get.json"
   },
   {
     "hostname": "github.gallerycdn.vsassets.io",
@@ -280,6 +340,12 @@
     "pathname": "/extensions/github/copilot/1.388.0/1761326434179/Microsoft.VisualStudio.Code.Manifest",
     "method": "GET",
     "filename": "github_gallerycdn_vsassets_io_extensions_github_copilot_1_388_0_1761326434179_Microsoft_VisualStudio_Code_Manifest_get.json"
+  },
+  {
+    "hostname": "github.gallerycdn.vsassets.io",
+    "pathname": "/extensions/github/copilot/1.388.0/1761326434179/Microsoft.VisualStudio.Services.Icons.Default",
+    "method": "GET",
+    "filename": "github_gallerycdn_vsassets_io_extensions_github_copilot_1_388_0_1761326434179_Microsoft_VisualStudio_Services_Icons_Default_get.json"
   },
   {
     "hostname": "github.gallerycdn.vsassets.io",
@@ -396,6 +462,12 @@
     "filename": "marketplace_visualstudio_com_apis_public_gallery_vscode_vscodevim_vim_latest_get.json"
   },
   {
+    "hostname": "ms-azuretools.gallery.vsassets.io",
+    "pathname": "/_apis/public/gallery/publisher/ms-azuretools/extension/vscode-containers/2.3.0/assetbyname/Microsoft.VisualStudio.Services.Icons.Default",
+    "method": "GET",
+    "filename": "ms_azuretools_gallery_vsassets_io_apis_public_gallery_publisher_ms_azuretools_extension_vscode_containers_2_3_0_assetbyname_Microsoft_VisualStudio_Services_Icons_Default_get.json"
+  },
+  {
     "hostname": "ms-azuretools.gallerycdn.vsassets.io",
     "pathname": "/extensions/ms-azuretools/vscode-azure-github-copilot/1.0.153/1765207712219/Microsoft.VisualStudio.Services.Icons.Default",
     "method": "GET",
@@ -408,6 +480,12 @@
     "filename": "ms_azuretools_gallerycdn_vsassets_io_extensions_ms_azuretools_vscode_containers_2_3_0_1762798402707_Microsoft_VisualStudio_Services_Icons_Default_get.json"
   },
   {
+    "hostname": "ms-kubernetes-tools.gallery.vsassets.io",
+    "pathname": "/_apis/public/gallery/publisher/ms-kubernetes-tools/extension/vscode-kubernetes-tools/1.3.27/assetbyname/Microsoft.VisualStudio.Services.Icons.Default",
+    "method": "GET",
+    "filename": "ms_kubernetes_tools_gallery_vsassets_io_apis_public_gallery_publisher_ms_kubernetes_tools_extension_vscode_kubernetes_tools_1_3_27_assetbyname_Microsoft_VisualStudio_Services_Icons_Default_get.json"
+  },
+  {
     "hostname": "ms-kubernetes-tools.gallerycdn.vsassets.io",
     "pathname": "/extensions/ms-kubernetes-tools/vscode-kubernetes-tools/1.3.27/1764092372350/Microsoft.VisualStudio.Services.Icons.Default",
     "method": "GET",
@@ -418,6 +496,12 @@
     "pathname": "/extensions/ms-toolsai/jupyter/2025.9.1/1760397611682/Microsoft.VisualStudio.Services.Icons.Default",
     "method": "GET",
     "filename": "ms_toolsai_gallerycdn_vsassets_io_extensions_ms_toolsai_jupyter_2025_9_1_1760397611682_Microsoft_VisualStudio_Services_Icons_Default_get.json"
+  },
+  {
+    "hostname": "ms-vscode-remote.gallery.vsassets.io",
+    "pathname": "/_apis/public/gallery/publisher/ms-vscode-remote/extension/remote-containers/0.431.1/assetbyname/Microsoft.VisualStudio.Services.Icons.Default",
+    "method": "GET",
+    "filename": "ms_vscode_remote_gallery_vsassets_io_apis_public_gallery_publisher_ms_vscode_remote_extension_remote_containers_0_431_1_assetbyname_Microsoft_VisualStudio_Services_Icons_Default_get.json"
   },
   {
     "hostname": "ms-vscode-remote.gallerycdn.vsassets.io",
@@ -436,6 +520,12 @@
     "pathname": "/extensions/ms-vscode/vscode-websearchforcopilot/0.1.4/1758913974331/Microsoft.VisualStudio.Services.Icons.Default",
     "method": "GET",
     "filename": "ms_vscode_gallerycdn_vsassets_io_extensions_ms_vscode_vscode_websearchforcopilot_0_1_4_1758913974331_Microsoft_VisualStudio_Services_Icons_Default_get.json"
+  },
+  {
+    "hostname": "proxy.individual.githubcopilot.com",
+    "pathname": "/models",
+    "method": "GET",
+    "filename": "proxy_individual_githubcopilot_com_models_get.json"
   },
   {
     "hostname": "raw.githubusercontent.com",
@@ -472,6 +562,12 @@
     "pathname": "/extensions/vscjava/vscode-java-upgrade/1.9.1/1764747707952/Microsoft.VisualStudio.Services.Icons.Default",
     "method": "GET",
     "filename": "vscjava_gallerycdn_vsassets_io_extensions_vscjava_vscode_java_upgrade_1_9_1_1764747707952_Microsoft_VisualStudio_Services_Icons_Default_get.json"
+  },
+  {
+    "hostname": "vscodevim.gallery.vsassets.io",
+    "pathname": "/_apis/public/gallery/publisher/vscodevim/extension/vim/1.32.2/assetbyname/Microsoft.VisualStudio.Services.Icons.Default",
+    "method": "GET",
+    "filename": "vscodevim_gallery_vsassets_io_apis_public_gallery_publisher_vscodevim_extension_vim_1_32_2_assetbyname_Microsoft_VisualStudio_Services_Icons_Default_get.json"
   },
   {
     "hostname": "vscodevim.gallerycdn.vsassets.io",
