--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,7 +108,7 @@ jobs:
           - name: promise-count
             args: --measure promise-count
           - name: promises-with-stack-trace
-            args: --measure promises-with-stack-trace
+            args: --measure promises-with-stack-trace --runs 37
           - name: named-array-count
             args: --measure named-array-count
           - name: css-rule-count
