--- a/packages/devtools-protocol/package.json
+++ b/packages/devtools-protocol/package.json
@@ -2,18 +2,16 @@
   "name": "@vscode-memory-leak-finder/devtools-protocol",
   "version": "0.0.0-dev",
   "description": "",
+  "keywords": [],
+  "license": "MIT",
+  "author": "",
+  "type": "module",
   "main": "src/index.js",
   "types": "src/index.d.ts",
-  "type": "module",
   "scripts": {
     "test": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --detectOpenHandles --forceExit",
     "test:watch": "node --unhandled-rejections=warn --experimental-vm-modules ../../node_modules/jest/bin/jest.js --watch"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {},
   "jest": {
     "modulePathIgnorePatterns": [
       "<rootDir>/.vscode-test/"
@@ -28,5 +26,7 @@
         "statements": 10
       }
     }
-  }
+  },
+  "dependencies": {},
+  "devDependencies": {}
 }
