--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     { "path": "./packages/cursor-e2e" },
     { "path": "./packages/devtools-protocol" },
     { "path": "./packages/download-worker" },
+    { "path": "./packages/compression-worker" },
     { "path": "./packages/e2e" },
     { "path": "./packages/file-system-worker" },
     { "path": "./packages/file-watcher-worker" },
