--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,8 @@ jobs:
             args: --measure promise-count
           - name: promises-with-stack-trace
             args: --measure promises-with-stack-trace --runs 37  --restart-between --run-skipped-tests-anyway
+          - name: promises-with-stack-trace-extensions
+            args: --measure promises-with-stack-trace --runs 37 --restart-between --run-skipped-tests-anyway --inspect-extensions
           - name: named-array-count
             args: --measure named-array-count
           - name: css-rule-count
@@ -265,6 +267,11 @@ jobs:
         with:
           name: vscode-memory-leak-finder-results-linux-promises-with-stack-trace
           path: ./vscode-memory-leak-finder-results-linux-promises-with-stack-trace
+      - uses: actions/download-artifact@v6
+        continue-on-error: true
+        with:
+          name: vscode-memory-leak-finder-results-linux-promises-with-stack-trace-extensions
+          path: ./vscode-memory-leak-finder-results-linux-promises-with-stack-trace-extensions
       - uses: actions/download-artifact@v6
         continue-on-error: true
         with:
