--- a/packages/injected-code/tsconfig.json
+++ b/packages/injected-code/tsconfig.json
@@ -13,7 +13,9 @@
     "assumeChangesOnlyAffectDirectDependencies": true,
     "strict": true,
     "strictNullChecks": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
+    "noUncheckedSideEffectImports": true,
+    "exactOptionalPropertyTypes": true,
     "composite": true,
     "allowImportingTsExtensions": true,
     "rootDir": ".",
