--- a/packages/heap-snapshot-worker/tsconfig.json
+++ b/packages/heap-snapshot-worker/tsconfig.json
@@ -7,9 +7,11 @@
     "types": ["node"],
     "moduleResolution": "NodeNext",
     "isolatedModules": true,
-    "strict": false,
+    "strict": true,
     "strictNullChecks": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
+    "noUncheckedSideEffectImports": true,
+    "exactOptionalPropertyTypes": true,
     "skipLibCheck": true,
     "noEmit": true,
     "allowSyntheticDefaultImports": true,
