--- a/packages/prompts/tsconfig.json
+++ b/packages/prompts/tsconfig.json
@@ -9,7 +9,9 @@
     "isolatedModules": true,
     "strict": true,
     "strictNullChecks": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
+    "noUncheckedSideEffectImports": true,
+    "exactOptionalPropertyTypes": true,
     "skipLibCheck": true,
     "noEmit": true,
     "allowSyntheticDefaultImports": true,
