--- a/packages/video-recording-worker/tsconfig.json
+++ b/packages/video-recording-worker/tsconfig.json
@@ -9,6 +9,8 @@
     "isolatedModules": true,
     "strict": true,
     "noImplicitAny": true,
+    "noUncheckedSideEffectImports": true,
+    "exactOptionalPropertyTypes": true,
     "skipLibCheck": true,
     "noEmit": true,
     "allowSyntheticDefaultImports": true,
