--- a/packages/proxy-worker/package.json
+++ b/packages/proxy-worker/package.json
@@ -17,14 +17,9 @@
     "@lvce-editor/verror": "^1.7.0",
     "@mongodb-js/zstd": "^7.0.0",
     "execa": "^9.6.1",
-    "http-proxy-agent": "^7.0.2",
-    "jsonwebtoken": "^9.0.2",
-    "node-fetch": "^3.3.2",
-    "node-forge": "^1.3.3"
+    "http-proxy-agent": "^7.0.2"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^25.0.3",
-    "@types/node-forge": "^1.3.14"
+    "@types/node": "^25.0.3"
   }
 }
