feature: add cryptography worker (#2323)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     { "path": "./packages/build" },
     { "path": "./packages/chart-worker" },
     { "path": "./packages/charts" },
+    { "path": "./packages/cryptography-worker" },
     { "path": "./packages/cli" },
     { "path": "./packages/compression-worker" },
     { "path": "./packages/cursor-e2e" },
