--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     { "path": "./packages/memory-leak-finder" },
     { "path": "./packages/original-name-worker" },
     { "path": "./packages/page-object" },
+    { "path": "./packages/proxy-worker" },
     { "path": "./packages/prompts" },
     { "path": "./packages/repository-worker" },
     { "path": "./packages/source-map-worker" },
