--- a/packages/compression-worker/package.json
+++ b/packages/compression-worker/package.json
@@ -19,6 +19,7 @@
     "@lvce-editor/rpc": "^4.20.0",
     "@lvce-editor/verror": "^1.7.0",
     "@mongodb-js/zstd": "^7.0.0",
+    "execa": "^9.6.1",
     "extract-zip": "^2.0.1"
   }
 }
