fix: tsc in heap-snapshot-worker (#2378)

--- a/packages/heap-snapshot-worker/tsconfig.json
+++ b/packages/heap-snapshot-worker/tsconfig.json
@@ -25,5 +25,5 @@
     "useUnknownInCatchVariables": false,
     "allowImportingTsExtensions": true
   },
-  "include": ["src"]
+  "include": ["src", "test"]
 }
