--- a/packages/prompts/package.json
+++ b/packages/prompts/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@vscode-memory-leak-finder/prompts",
   "version": "0.0.0-dev",
+  "license": "MIT",
   "type": "module",
   "main": "src/main.ts",
   "scripts": {
