--- a/packages/repository-worker/package.json
+++ b/packages/repository-worker/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@vscode-memory-leak-finder/repository-worker",
   "version": "0.0.0-dev",
+  "license": "MIT",
   "type": "module",
   "main": "src/main.ts",
   "scripts": {
