--- a/packages/extension-source-maps/package.json
+++ b/packages/extension-source-maps/package.json
@@ -12,10 +12,5 @@
     "@lvce-editor/verror": "^1.7.0",
     "execa": "^9.6.1"
   },
-  "devDependencies": {
-    "@jest/globals": "^30.2.0",
-    "@types/node": "^25.0.3",
-    "jest": "^30.2.0",
-    "typescript": "^5.9.3"
-  }
+  "devDependencies": {}
 }
