--- a/packages/extension-source-maps/package.json
+++ b/packages/extension-source-maps/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@lvce-editor/assert": "^1.5.1",
-    "@lvce-editor/verror": "^1.7.0",
-    "execa": "^9.6.1"
+    "@lvce-editor/rpc": "^4.20.0",
+    "@lvce-editor/verror": "^1.7.0"
   },
   "devDependencies": {}
 }
