feature: install types node only once at root

--- a/packages/network-worker/package.json
+++ b/packages/network-worker/package.json
@@ -13,7 +13,5 @@
     "@lvce-editor/rpc": "^4.20.0",
     "@lvce-editor/verror": "^1.7.0"
   },
-  "devDependencies": {
-    "@types/node": "^25.0.3"
-  }
+  "devDependencies": {}
 }
