--- a/packages/chart-worker/package.json
+++ b/packages/chart-worker/package.json
@@ -14,7 +14,5 @@
     "@observablehq/plot": "^0.6.17",
     "jsdom": "^26.1.0"
   },
-  "devDependencies": {
-    "@types/node": "^25.0.3"
-  }
+  "devDependencies": {}
 }
