--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -64,7 +64,5 @@
     "@lvce-editor/verror": "^1.7.0",
     "chalk": "^5.6.2"
   },
-  "devDependencies": {
-    "@types/node": "^25.0.3"
-  }
+  "devDependencies": {}
 }
