--- a/packages/heap-snapshot-worker-benchmarks/package.json
+++ b/packages/heap-snapshot-worker-benchmarks/package.json
@@ -4,7 +4,5 @@
   "description": "Benchmarks for heap-snapshot-worker",
   "license": "MIT",
   "type": "module",
-  "devDependencies": {
-    "@types/node": "^25.0.3"
-  }
+  "devDependencies": {}
 }
