--- a/packages/heap-snapshot-worker/package.json
+++ b/packages/heap-snapshot-worker/package.json
@@ -15,7 +15,5 @@
     "@lvce-editor/assert": "^1.5.1",
     "@lvce-editor/rpc": "^4.20.0"
   },
-  "devDependencies": {
-    "@types/node": "^25.0.3"
-  }
+  "devDependencies": {}
 }
