--- a/packages/injected-code/package.json
+++ b/packages/injected-code/package.json
@@ -11,7 +11,5 @@
   "dependencies": {
     "@lvce-editor/assert": "^1.5.1"
   },
-  "devDependencies": {
-    "@types/node": "^25.0.3"
-  }
+  "devDependencies": {}
 }
