--- a/packages/stdout-worker/package.json
+++ b/packages/stdout-worker/package.json
@@ -64,7 +64,5 @@
     "ansi-escapes": "^7.2.0",
     "chalk": "^5.6.2"
   },
-  "devDependencies": {
-    "@types/node": "^25.0.3"
-  }
+  "devDependencies": {}
 }
