feature: add error-worker package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,11 @@
     { "path": "./packages/cryptography-worker" },
     { "path": "./packages/cursor-e2e" },
     { "path": "./packages/devtools-protocol" },
-    { "path": "./packages/extension-source-maps" },
     { "path": "./packages/download-worker" },
     { "path": "./packages/e2e" },
+    { "path": "./packages/error-worker" },
     { "path": "./packages/exec-worker" },
+    { "path": "./packages/extension-source-maps" },
     { "path": "./packages/file-system-worker" },
     { "path": "./packages/file-watcher-worker" },
     { "path": "./packages/heap-snapshot-worker" },
