--- a/packages/charts/package.json
+++ b/packages/charts/package.json
@@ -26,6 +26,7 @@
     }
   },
   "dependencies": {
-    "@lvce-editor/rpc": "^4.20.0"
+    "@lvce-editor/rpc": "^4.20.0",
+    "escape-html": "^1.0.3"
   }
 }
