--- a/packages/charts/package.json
+++ b/packages/charts/package.json
@@ -28,5 +28,8 @@
   "dependencies": {
     "@lvce-editor/rpc": "^4.20.0",
     "escape-html": "^1.0.3"
+  },
+  "devDependencies": {
+    "@types/escape-html": "^1.0.4"
   }
 }
